# DynamicRoutingTask

./: DynamicRouting1.py  DynamicRouting1_postSessionAnalysis.py  DynamicRoutingOptoParams.py  DynamicRoutingTaskDev.yml  DynamicRoutingTaskDev_env.bat  DynamicRoutingTaskDev_pip.text  DynamicRoutintTaskDev_packages.txt  OptoParams.py  OptoTagging.py  RFMapping.py  SamStimGui.py  SamStimGui_env.bat  TaskControl.py  TaskUtils.py  camstimControl.py  camstimLight.py  pyproject.toml  runTask.py  startTask.py  taskParams.json  test.py
.github/workflows/: publish.yml
Analysis/: DynamicRoutingAnalysisUtils.py  RLmodel.py  RLmodelHPC.py  RLmodelSlurm.py  RLmodelUtils.py  RLmodel_old.py  RNNmodel.py  RNNmodelHPC.py  RNNmodelSlurm.py  SNc_VTA_anlaysis.py  alignBehavVideo.py  behaviorClustering.py  decoder_analysis.py  disrnn.py  disrnnHPC.py  disrnnSlurm.py  disrnn_old.py  docLickProb_sam.py  dr_analysis_sam.py  dr_behav_figs.py  dr_behav_model.py  dr_ephys_analysis.py  fileIO.py  findBehaviorVideos.py  glm_hmm_sam.py  modifyTrainingSummary.py  muscimol_analysis.py  npc_analysis.py  npc_analysis_2.py  npc_ephys_analysis.py  opto_analysis.py  opto_ephys_analysis.py  presentation_June2023.py  regressionModel.py  sac_may2023.py  sessionSummaryFigs.py  sound_ephys_analysis.py  sound_sync_test.py  variableBlockDur.py
OptoGui/: NP3_bregma_galvo.txt  NP3_laser_488_power.txt  NP3_laser_power_488.txt  OptoGui.py  OptoGui_env.bat  startOptoGui.bat  startOptoTask.py
SamStimGui/: SamStimGui.py  SamStimGui_env.bat  startSamStimGui.bat
