
[project]
name = "DynamicRoutingTask"
version = "0.1.1"
dependencies = [
    "h5py",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]
requires-python = ">=3.9"
description = ""
authors = [
    {name = "samgale",email = "samg@alleninstitute.org"},
]
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
DynamicRoutingTask = "."

[tool.pdm.dev-dependencies]
dev = [
    "pdm-bump>=0.7.3",
]
